# MettaModeler

./: .env  .replit  LAUNCHER.md  PROJECT.md  README.md  RENDER.md  dev.sh  migrate.ts  package-lock.json  package.json  pyproject.toml  start.sh  tailwind.config.ts  test.xlsx  test_excel.py  test_excel.xlsx  test_excel_server.py  test_excel_server.xlsx  test_export_20250423_140251.xlsx  test_server_export_20250423_140321.xlsx  theme.json  vite.config.ts
attached_assets/: Pasted--Load-data-model-data-id-5-name-Coffee-and-Anxiety-description-projec-1743785670166.txt  Pasted--m-building-a-web-based-modeling-platform-called-MettaModeler-It-s-a-future-forward-clean-and-ele-1743661908894.txt  Pasted-Delta-data-generated-has-data-6-queryClient-ts-15--1743691016202.txt  Pasted-chunk-RPCDYKBN-js-v-f7b47af2-521-Warning-validateDOMNesting-a-cannot-appear-as-a-descendant-1743685387512.txt  Pasted-reactflow-js-v-771de18e-2828-React-Flow-Couldn-t-create-edge-for-target-handle-id-undefined-e-1743701700835.txt
client/: README.md  index.html  launch.sh  package.json  tailwind.config.ts  vite.config.ts
docs/: architecture.md
migrations/: 0000_bent_shriek.sql
python_sim/: README.md  app.py  app.py.bak  coffee_anxiety_model.xlsx  coffee_anxiety_model_debug.xlsx  complex_test_export.xlsx  export.py  export_schema.py  launch.sh  setup.sh  simulate.py  simulation_input.schema.json  simulation_schema.py  start.sh  test_excel.py  test_excel_server.py  test_export.xlsx  test_export_server.xlsx
server/: auth.ts  export.ts  index.ts  routes.ts  storage.ts  types.ts
shared/: schema.ts
(+49 files in other folders)
