[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "matplotlib>=3.10.1",
    "nbformat>=5.10.4",
    "networkx>=3.4.2",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pydantic>=2.11.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
]
